--- a/components/ContentProtector.module.css
+++ b/components/ContentProtector.module.css
@@ -132,6 +132,17 @@
   overflow: auto;
 }
 
+.protectedIframe {
+  width: 100%;
+  height: 100%;
+  border: none;
+  display: block;
+  user-select: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+}
+
 .protectedImage {
   width: 100%;
   height: auto;
